Closed
Bug 1058713
Opened 11 years ago
Closed 11 years ago
Lots of "invalid context 0x0" errors scrolling Firefox in fullscreen mode on Yosemite DP6
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
mozilla34
People
(Reporter: smichaud, Assigned: mstange)
References
Details
Attachments
(3 files)
Whenever you "zoom" to fullscreen mode in Firefox on Yosemite DP6 (build 14A329f) and scroll the page, you see lots of the following errors:
CGBitmapContextCreateImage: invalid context 0x0. This is a serious error. This application, or a library it uses, is using an invalid context and is thereby contributing to an overall degradation of system stability and reliability. This notice is a courtesy: please fix this problem. It will become a fatal error in an upcoming update.
CGContextSetRGBFillColor: invalid context 0x0. This is a serious error. This application, or a library it uses, is using an invalid context and is thereby contributing to an overall degradation of system stability and reliability. This notice is a courtesy: please fix this problem. It will become a fatal error in an upcoming update.
CGContextFillEllipseInRect: invalid context 0x0. This is a serious error. This application, or a library it uses, is using an invalid context and is thereby contributing to an overall degradation of system stability and reliability. This notice is a courtesy: please fix this problem. It will become a fatal error in an upcoming update.
This kind of error has been reported before on OS X 10.9.X (see bug 946069). But this is the first time we've found good STR.
As best I can tell, the current STR (zoom to fullscreen mode and scroll the page) only works on Yosemite DP6 (and up). It doesn't work on Yosemite DP5 (build 14A314h).
These errors are also reported at bug 1057748, supposedly associated with performance problems in fullscreen mode.
Reporter | ||
Updated•11 years ago
|
Comment 1•11 years ago
|
||
Can you find out where the null cgcontext is coming from?
Reporter | ||
Comment 2•11 years ago
|
||
> Can you find out where the null cgcontext is coming from?
Yes, but it probably won't be til later this week (or early next week). I'm currently putting out bigger fires.
Reporter | ||
Comment 3•11 years ago
|
||
These traces show (I think) that this is a Cocoa widgets bug.
Reporter | ||
Updated•11 years ago
|
Component: Graphics → Widget: Cocoa
Reporter | ||
Comment 4•11 years ago
|
||
This, as it stands, may only work on Yosemite DP6.
Assignee | ||
Comment 5•11 years ago
|
||
Oh, that makes sense. mTitlebarRect is probably empty while we're in fullscreen mode, and creating a zero-sized context fails.
Reporter | ||
Comment 6•11 years ago
|
||
This (from bug 1057748 comment #15) is the reported regression range for these errors:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=49d2fce9a86c&tochange=8f0d4afd151e
Assignee | ||
Comment 8•11 years ago
|
||
(In reply to Steven Michaud from comment #6)
> This (from bug 1057748 comment #15) is the reported regression range for
> these errors:
> https://hg.mozilla.org/mozilla-central/
> pushloghtml?fromchange=49d2fce9a86c&tochange=8f0d4afd151e
Definitely bug 880620 then. https://hg.mozilla.org/mozilla-central/rev/3e7eb1a98175 included a change that made mTitlebarRect empty when the window's corner radius is zero, and apparently that started happening in fullscreen mode with Yosemite.
Blocks: 880620
Reporter | ||
Comment 9•11 years ago
|
||
Comment on attachment 8480088 [details] [diff] [review]
v1
I've started a tryserver build, so we can all test:
https://tbpl.mozilla.org/?tree=Try&rev=60ec3263cbc2
Comment 10•11 years ago
|
||
Assuming the result of that build was http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/smichaud@pobox.com-60ec3263cbc2/try-macosx64/firefox-34.0a1.en-US.mac.dmg (I’m not up to speed on the Try server) I’m no longer seeing any 0x0 console messages, and it’s also fixed the issue I reported in bug #1057748. Thanks!
Reporter | ||
Comment 11•11 years ago
|
||
Comment on attachment 8480088 [details] [diff] [review]
v1
> http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/smichaud@pobox.com-60ec3263cbc2/try-macosx64/firefox-34.0a1.en-US.mac.dmg
Yes, that's the right build to test with.
It works for me, too. And this patch looks fine.
Attachment #8480088 -
Flags: review?(smichaud) → review+
Assignee | ||
Comment 12•11 years ago
|
||
![]() |
||
Comment 13•11 years ago
|
||
Assignee: nobody → mstange
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in
before you can comment on or make changes to this bug.
Description
•