Bug 1058713 - Don't attempt to create a zero-sized CGContext for titlebar buttons. r=smichaud